Tests/CompilerTests/negative/invalid-deconstruction.hylo
//! no-std

struct A {}

trait P {
  fun f() -> {Void, ...A}
}

public fun test<T is P>(_ x: T) {
  let (a, b) = x.f()
}
